--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+  "build": "vite build",
+  "preview": "vite preview",
+  "deploy": "vite-plugin-gh-pages"
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.13.1",
@@ -45,6 +45,7 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
     "vite": "^5.4.9",
+    "vite-plugin-gh-pages": "^1.0.0",
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4"
   }
