--- a/package.json
+++ b/package.json
@@ -3,14 +3,11 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
- "scripts": {
+  "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
+    "build": "vite build",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
-    "clean": "rm -rf dist"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.13.1",
@@ -53,5 +50,5 @@
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4"
   },
-   "homepage": "https://python-15.github.io/ResumeMakerr/"
+  "homepage": "https://python-15.github.io/ResumeMakerr/"
 }
